--- a/index.html
+++ b/index.html
@@ -4,10 +4,134 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/xjr3lgi.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
   <body>
+    <main class="content">
+      <article class="item">
+        <figure class="item__fig">
+          <div class="item__aspect" style="--aspect: 151.75%"></div>
+          <img src="/img/img-01.jpg" alt="img-01" class="item__img" />
+        </figure>
+        <span class="item__pretitle">Cartesian man</span>
+        <h2 class="item__title">Actuator</h2>
+        <span class="item__counter">01</span>
+        <p class="item__description">
+          Life lived in the absence of the psychedelic experience is life
+          trivialized, life denied, life enslaved to the ego.
+        </p>
+      </article>
+      <article class="item">
+        <figure class="item__fig">
+          <div class="item__aspect" style="--aspect: 104.25%"></div>
+          <img src="/img/img-02.jpg" alt="img-02" class="item__img" />
+        </figure>
+        <span class="item__pretitle">Assembly fix</span>
+        <h2 class="item__title">Random</h2>
+        <span class="item__counter">02</span>
+        <p class="item__description">
+          You are a divine being. You matter, you count. You come from realms of
+          unimaginable power and light, and you will return to those realms.
+        </p>
+      </article>
+      <article class="item">
+        <figure class="item__fig">
+          <div class="item__aspect" style="--aspect: 147.25%"></div>
+          <img src="/img/img-03.jpg" alt="img-03" class="item__img" />
+        </figure>
+        <span class="item__pretitle">Dead head</span>
+        <h2 class="item__title">Uplinking</h2>
+        <span class="item__counter">03</span>
+        <p class="item__description">
+          You simply have to turn your back on a culture that has gone sterile
+          and dead and get with the program of a living world and the
+          imagination.
+        </p>
+      </article>
+      <article class="item">
+        <figure class="item__fig">
+          <div class="item__aspect" style="--aspect: 95.25%"></div>
+          <img src="/img/img-04.jpg" alt="img-04" class="item__img" />
+        </figure>
+        <span class="item__pretitle">Absence</span>
+        <h2 class="item__title">Half time</h2>
+        <span class="item__counter">04</span>
+        <p class="item__description">
+          The syntactical nature of reality, the real secret of magic, is that
+          the world is made of words. And if you know the words that the world
+          is made of, you can make of it whatever you wish.
+        </p>
+      </article>
+      <article class="item">
+        <figure class="item__fig">
+          <div class="item__aspect" style="--aspect: 95.25%"></div>
+          <img src="/img/img-05.jpg" alt="img-05" class="item__img" />
+        </figure>
+        <span class="item__pretitle">Material Handling</span>
+        <h2 class="item__title">Operator</h2>
+        <span class="item__counter">05</span>
+        <p class="item__description">
+          We tend to disempower ourselves. We tend to believe that we don’t
+          matter. And in the act of taking that idea to ourselves we give
+          everything away to somebody else, to something else.
+        </p>
+      </article>
+      <article class="item">
+        <figure class="item__fig">
+          <div class="item__aspect" style="--aspect: 95.25%"></div>
+          <img src="/img/img-06.jpg" alt="img-06" class="item__img" />
+        </figure>
+        <span class="item__pretitle">Quality Assurance</span>
+        <h2 class="item__title">Remote</h2>
+        <span class="item__counter">06</span>
+        <p class="item__description">
+          We are so much the victims of abstraction that with the Earth in
+          flames we can barely rouse ourselves to wander across the room and
+          look at the thermostat.
+        </p>
+      </article>
+      <article class="item">
+        <figure class="item__fig">
+          <div class="item__aspect" style="--aspect: 95.25%"></div>
+          <img src="/img/img-07.jpg" alt="img-07" class="item__img" />
+        </figure>
+        <span class="item__pretitle">Teach Mode</span>
+        <h2 class="item__title">SLURBT</h2>
+        <span class="item__counter">07</span>
+        <p class="item__description">
+          The cost of sanity, in this society, is a certain level of alienation.
+        </p>
+      </article>
+      <article class="item">
+        <figure class="item__fig">
+          <div class="item__aspect" style="--aspect: 95.25%"></div>
+          <img src="/img/img-08.jpg" alt="img-08" class="item__img" />
+        </figure>
+        <span class="item__pretitle">World Model</span>
+        <h2 class="item__title">Cybark</h2>
+        <span class="item__counter">08</span>
+        <p class="item__description">
+          Our need to feel part of the world seems to demand that we express
+          ourselves through creative activity.
+        </p>
+      </article>
+      <article class="item">
+        <figure class="item__fig">
+          <div class="item__aspect" style="--aspect: 95.25%"></div>
+          <img src="/img/img-09.jpg" alt="img-09" class="item__img" />
+        </figure>
+        <span class="item__pretitle">Sensory guide</span>
+        <h2 class="item__title">Alt Touch</h2>
+        <span class="item__counter">09</span>
+        <p class="item__description">
+          We are caged by our cultural programming. Culture is a mass
+          hallucination, and when you step outside the mass hallucination you
+          see it for what it’s worth.
+        </p>
+      </article>
+    </main>
     <canvas class="webgl"></canvas>
     <script type="module" src="./js/app.js"></script>
   </body>
